--- a/run/resultAnalyse.ipynb
+++ b/run/resultAnalyse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,15 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-de12f508cdbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mwhich_benchmark\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'SynOOD_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdepX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdepU\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVX\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mwhich_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'_'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmXs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mresultDir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstorage_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34mf'/results/{which_benchmark}_{which_dataset}_{args.mode}/ood{brdc[args.ood]}/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mdataDir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'{args.storage_path}/data/{which_benchmark}/{which_dataset}/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresultDir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexist_ok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
    "source": [
     "# set OOD path\n",
-    "''' bias rate '''\n",
-    "args.ood = -3.0\n",
-    "br = [-3.0, -2.5, -2.0, -1.5, -1.3, 0.0, 1.3, 1.5, 2.0, 2.5, 3.0]\n",
-    "brdc = {-3.0: 'n30', -2.5:'n25', -2.0:'n20', -1.5:'n15', -1.3:'n13', 1.3:'p13', 1.5:'p15', 2.0:'p20', 2.5:'p25', 3.0:'p30', 0.0:'0'}\n",
+    "# ''' bias rate 1'''\n",
+    "# br = [-3.0, -2.5, -2.0, -1.5, -1.3, 1.3, 1.5, 2.0, 2.5, 3.0, 0.0]\n",
+    "# brdc = {-3.0: 'n30', -2.5:'n25', -2.0:'n20', -1.5:'n15', -1.3:'n13', 1.3:'p13', 1.5:'p15', 2.0:'p20', 2.5:'p25', 3.0:'p30', 0.0:'0'}\n",
+    "''' bias rate 2'''\n",
+    "br = [1.0, 1.3, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0]\n",
+    "brdc = {1.0:'p10', 1.3:'p13', 1.5:'p15',2.0:'p20', 2.5:'p25', 3.0:'p30',3.5:'p35', 4.0:'p40',4.5:'p45', 5.0:'p50'}\n",
     "which_benchmark = 'SynOOD_'+'_'.join(str(item) for item in [args.sc, args.sh, args.one, args.depX, args.depU,args.VX])\n",
     "which_dataset = '_'.join(str(item) for item in [args.mV, args.mX, args.mU, args.mXs])\n",
     "resultDir = args.storage_path + f'/results/{which_benchmark}_{which_dataset}_{args.mode}/ood{brdc[args.ood]}/'\n",
@@ -169,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +199,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='fde97cb9-118a-4335-8398-acc738e5ca23'></div>"
+       "<div id='794aafba-baa6-4b94-bd31-1e8aaf76dbb8'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -198,7 +212,9 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "l = [-3.0, -2.5,-2.0, 0.0, 2.0, 2.5, 3.0]\n",
+    "# l = [-3.0, -2.5,-2.0, 0.0, 2.0, 2.5, 3.0]\n",
+    "# p10,p13,p15,p20,p25,p30,p35,p40,p45,p50\n",
+    "l = [1.0, 1.3,4.5, 5.0]\n",
     "% matplotlib notebook\n",
     "mean_ate_list = []\n",
     "std_ate_list = []\n",
@@ -210,11 +226,11 @@
     "    which_dataset = '_'.join(str(item) for item in [args.mV, args.mX, args.mU, args.mXs])\n",
     "    resultDir = args.storage_path + f'/results/{which_benchmark}_{which_dataset}_{args.mode}/ood{brdc[args.ood]}/'\n",
     "\n",
-    "    data_ate = pd.read_csv(f'{resultDir}/CBIV_{args.mode}_results_ood_ate_cbiv.csv')\n",
-    "    data_pehe = pd.read_csv(f'{resultDir}/CBIV_{args.mode}_results_ood_pehe_cbiv.csv')\n",
-    "    new_order = ['n30','n25','n20','n15','n13','0','p13','p15','p20','p25','p30']\n",
-    "    data_ate = data_ate.reindex(columns=new_order)\n",
-    "    data_pehe = data_pehe.reindex(columns=new_order)\n",
+    "    data_ate = pd.read_csv(f'{resultDir}/CBIV_{args.mode}_results_ood_ate_cbiv_positive.csv')\n",
+    "    data_pehe = pd.read_csv(f'{resultDir}/CBIV_{args.mode}_results_ood_pehe_cbiv_positive.csv')\n",
+    "    # new_order = ['n30','n25','n20','n15','n13','0','p13','p15','p20','p25','p30']\n",
+    "    # data_ate = data_ate.reindex(columns=new_order)\n",
+    "    # data_pehe = data_pehe.reindex(columns=new_order)\n",
     "\n",
     "    # 计算每一列的均值 方差\n",
     "    mean_values_ate = np.mean(data_ate[:][:10], axis=0)\n",
@@ -230,23 +246,33 @@
     "\n",
     "fig, (ax1, ax2) = plt.subplots(1,2, figsize = (10,4), dpi = 200)\n",
     "ax1.grid(ls = \"--\", lw = 0.5, color = \"#4E616C\")\n",
-    "ax1.errorbar(br, mean_ate_list[0], yerr=std_ate_list[0], marker='o', label='-3.0')\n",
-    "ax1.errorbar(br, mean_ate_list[1], yerr=std_ate_list[1], marker='v', label='-2.5')\n",
-    "ax1.errorbar(br, mean_ate_list[2], yerr=std_ate_list[2], marker='^', label='-2.0')\n",
-    "ax1.errorbar(br, mean_ate_list[3], yerr=std_ate_list[3], marker='<', label='0.0')\n",
-    "ax1.errorbar(br, mean_ate_list[4], yerr=std_ate_list[4], marker='>', label='2.0')\n",
-    "ax1.errorbar(br, mean_ate_list[5], yerr=std_ate_list[5], marker='1', label='2.5')\n",
-    "ax1.errorbar(br, mean_ate_list[6], yerr=std_ate_list[6], marker='2', label='3.0')\n",
+    "ax1.errorbar(br, mean_ate_list[0], yerr=std_ate_list[0], marker='o', label='1.0')\n",
+    "ax1.errorbar(br, mean_ate_list[1], yerr=std_ate_list[1], marker='v', label='1.3')\n",
+    "ax1.errorbar(br, mean_ate_list[2], yerr=std_ate_list[2], marker='^', label='4.5')\n",
+    "ax1.errorbar(br, mean_ate_list[3], yerr=std_ate_list[3], marker='<', label='5.0')\n",
+    "\n",
+    "# ax1.errorbar(br, mean_ate_list[0], yerr=std_ate_list[0], marker='o', label='-3.0')\n",
+    "# ax1.errorbar(br, mean_ate_list[1], yerr=std_ate_list[1], marker='v', label='-2.5')\n",
+    "# ax1.errorbar(br, mean_ate_list[2], yerr=std_ate_list[2], marker='^', label='-2.0')\n",
+    "# ax1.errorbar(br, mean_ate_list[3], yerr=std_ate_list[3], marker='<', label='0.0')\n",
+    "# ax1.errorbar(br, mean_ate_list[4], yerr=std_ate_list[4], marker='>', label='2.0')\n",
+    "# ax1.errorbar(br, mean_ate_list[5], yerr=std_ate_list[5], marker='1', label='2.5')\n",
+    "# ax1.errorbar(br, mean_ate_list[6], yerr=std_ate_list[6], marker='2', label='3.0')\n",
     "ax1.set_xlabel('bias rate')\n",
     "ax1.set_ylabel('ATE')\n",
     "ax2.grid(ls = \"--\", lw = 0.5, color = \"#4E616C\")\n",
-    "ax2.errorbar(br, mean_pehe_list[0], yerr=std_pehe_list[0], marker='o', label='-3.0')\n",
-    "ax2.errorbar(br, mean_pehe_list[1], yerr=std_pehe_list[1], marker='v', label='-2.5')\n",
-    "ax2.errorbar(br, mean_pehe_list[2], yerr=std_pehe_list[2], marker='^', label='-2.0')\n",
-    "ax2.errorbar(br, mean_pehe_list[3], yerr=std_pehe_list[3], marker='<', label='0.0')\n",
-    "ax2.errorbar(br, mean_pehe_list[4], yerr=std_pehe_list[4], marker='>', label='2.0')\n",
-    "ax2.errorbar(br, mean_pehe_list[5], yerr=std_pehe_list[5], marker='1', label='2.5')\n",
-    "ax2.errorbar(br, mean_pehe_list[6], yerr=std_pehe_list[6], marker='2', label='3.0')\n",
+    "ax2.errorbar(br, mean_pehe_list[0], yerr=std_pehe_list[0], marker='o', label='1.0')\n",
+    "ax2.errorbar(br, mean_pehe_list[1], yerr=std_pehe_list[1], marker='v', label='1.3')\n",
+    "ax2.errorbar(br, mean_pehe_list[2], yerr=std_pehe_list[2], marker='^', label='4.5')\n",
+    "ax2.errorbar(br, mean_pehe_list[3], yerr=std_pehe_list[3], marker='<', label='5.0')\n",
+    "\n",
+    "# ax2.errorbar(br, mean_pehe_list[0], yerr=std_pehe_list[0], marker='o', label='-3.0')\n",
+    "# ax2.errorbar(br, mean_pehe_list[1], yerr=std_pehe_list[1], marker='v', label='-2.5')\n",
+    "# ax2.errorbar(br, mean_pehe_list[2], yerr=std_pehe_list[2], marker='^', label='-2.0')\n",
+    "# ax2.errorbar(br, mean_pehe_list[3], yerr=std_pehe_list[3], marker='<', label='0.0')\n",
+    "# ax2.errorbar(br, mean_pehe_list[4], yerr=std_pehe_list[4], marker='>', label='2.0')\n",
+    "# ax2.errorbar(br, mean_pehe_list[5], yerr=std_pehe_list[5], marker='1', label='2.5')\n",
+    "# ax2.errorbar(br, mean_pehe_list[6], yerr=std_pehe_list[6], marker='2', label='3.0')\n",
     "ax2.set_xlabel('bias rate')\n",
     "ax2.set_ylabel('PEHE')\n",
     "fig.suptitle(f\"Syn-{args.mV}-{args.mX}-{args.mU}-{args.mXs}-{args.mode} OOD:total\")\n",
