--- a/run/test.ipynb
+++ b/run/test.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wyliu/yes/envs/tf-torch/lib/python3.6/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from torch.autograd import grad\n",
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,21 +419,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<utils.loadDataset.CausalDataset at 0x7faac42c1f98>"
+       "array([], shape=(10000, 0), dtype=float64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "exp = 1\n",
+    "train_df = pd.read_csv(dataDir + f'{exp}/ood_{brdc[3.0]}/train.csv')\n",
+    "train = CausalDataset(train_df, variables = ['u','x','v','xs','z','p','s','m','t','g','y','f','c'], observe_vars=['v','x','xs'])\n",
+    "train.s"
+   ]
   },
   {
    "cell_type": "code",
@@ -1054,6 +1068,37 @@
    ],
    "source": [
     "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataDir='../Data/Causal/'\n",
+    "ihdp_train_path = dataDir + 'ihdp_npci_1-1000.test.npz'\n",
+    "ihdp_train = np.load(ihdp_train_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75, 25, 1000)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ihdp_train['x'].shape"
    ]
   },
   {
