--- a/run/twinsCBIV.ipynb
+++ b/run/twinsCBIV.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "from sys import path\n",
-    "path.append(r\"../\")"
+    "path.append(r\"../\")\n",
+    "path.append(r\"../../\")"
    ]
   },
   {
@@ -37,12 +38,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exp:0; lrate:0.0005; alpha: 0.0001; lambda: 0.0001; iterations: 200; reweight: 0\n",
+      "Defining graph...\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wyliu/yes/envs/tf-torch/lib/python3.6/site-packages/tensorflow_core/python/framework/indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
+      "/home/wyliu/yes/envs/tf-torch/lib/python3.6/site-packages/tensorflow_core/python/framework/indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\tObj: 0.6934,\tF: 0.6928,\tCf: 0.6928,\tImb: 0.04,\tVal: 0.6928,\tValImb: 0.039,\tValObj: 0.6934,\tate_train: 0.0000,\tate_test: 0.0000\tpehe_train: 0.0000,\tpehe_test: 0.0000\n",
+      "20\tObj: 0.6579,\tF: 0.6574,\tCf: 0.6570,\tImb: 0.003,\tVal: 0.6566,\tValImb: 0.0028,\tValObj: 0.6571,\tate_train: 0.0021,\tate_test: 0.0021\tpehe_train: 0.0032,\tpehe_test: 0.0032\n",
+      "40\tObj: 0.4490,\tF: 0.4474,\tCf: 0.4317,\tImb: 0.0056,\tVal: 0.4372,\tValImb: 0.0055,\tValObj: 0.4388,\tate_train: -0.0467,\tate_test: -0.0467\tpehe_train: 0.0690,\tpehe_test: 0.0695\n",
+      "60\tObj: 0.4421,\tF: 0.4406,\tCf: 0.4258,\tImb: 0.0033,\tVal: 0.4299,\tValImb: 0.0029,\tValObj: 0.4315,\tate_train: -0.0259,\tate_test: -0.0259\tpehe_train: 0.0382,\tpehe_test: 0.0385\n",
+      "80\tObj: 0.4479,\tF: 0.4464,\tCf: 0.4285,\tImb: 0.0053,\tVal: 0.4370,\tValImb: 0.0042,\tValObj: 0.4385,\tate_train: -0.0597,\tate_test: -0.0597\tpehe_train: 0.0883,\tpehe_test: 0.0889\n",
+      "100\tObj: 0.4411,\tF: 0.4395,\tCf: 0.4240,\tImb: 0.0071,\tVal: 0.4272,\tValImb: 0.0056,\tValObj: 0.4287,\tate_train: -0.0220,\tate_test: -0.0220\tpehe_train: 0.0327,\tpehe_test: 0.0330\n",
+      "120\tObj: 0.4402,\tF: 0.4387,\tCf: 0.4294,\tImb: 0.015,\tVal: 0.4249,\tValImb: 0.012,\tValObj: 0.4264,\tate_train: 0.0326,\tate_test: 0.0326\tpehe_train: 0.0478,\tpehe_test: 0.0480\n",
+      "140\tObj: 0.4391,\tF: 0.4376,\tCf: 0.4259,\tImb: 0.051,\tVal: 0.4209,\tValImb: 0.048,\tValObj: 0.4224,\tate_train: 0.0205,\tate_test: 0.0206\tpehe_train: 0.0299,\tpehe_test: 0.0299\n",
+      "160\tObj: 0.4380,\tF: 0.4366,\tCf: 0.4224,\tImb: 0.069,\tVal: 0.4217,\tValImb: 0.061,\tValObj: 0.4231,\tate_train: -0.0106,\tate_test: -0.0106\tpehe_train: 0.0182,\tpehe_test: 0.0186\n",
+      "180\tObj: 0.4443,\tF: 0.4430,\tCf: 0.4319,\tImb: 0.053,\tVal: 0.4303,\tValImb: 0.054,\tValObj: 0.4317,\tate_train: -0.0280,\tate_test: -0.0284\tpehe_train: 0.0460,\tpehe_test: 0.0460\n",
+      "199\tObj: 0.4401,\tF: 0.4386,\tCf: 0.4309,\tImb: 0.047,\tVal: 0.4215,\tValImb: 0.05,\tValObj: 0.4230,\tate_train: 0.0431,\tate_test: 0.0427\tpehe_train: 0.0753,\tpehe_test: 0.0763\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-e836c810c6fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtwins_twoStage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtwins_alpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m     \u001b[0mmse_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfinal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_TwinsCBIV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataDir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresultDir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m     \u001b[0mres_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mres_list\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mobj_val\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ate_train'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mobj_val\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ate_test'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 3)"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import argparse\n",
@@ -74,7 +123,7 @@
     "    argparser.add_argument('--mV',default=5,type=int,help='The dim of Instrumental variables V')\n",
     "    argparser.add_argument('--mX',default=5,type=int,help='The dim of Confounding variables X')\n",
     "    argparser.add_argument('--mU',default=3,type=int,help='The dim of Unobserved confounding variables U')\n",
-    "    argparser.add_argument('--storage_path',default='../Data/',type=str,help='The dir of data storage')\n",
+    "    argparser.add_argument('--storage_path',default='../../Data/',type=str,help='The dir of data storage')\n",
     "    # Twins\n",
     "    argparser.add_argument('--twins_alpha',default=0.0001,type=float,help='')\n",
     "    argparser.add_argument('--twins_lambda',default=0.0001,type=float,help='')\n",
@@ -116,22 +165,22 @@
     "\n",
     "    res_list = []\n",
     "    \n",
-    "    args.twins_twoStage = False\n",
-    "    args.twins_alpha = 0\n",
-    "    mse_val, obj_val, final = run_TwinsCBIV(exp, args, dataDir, resultDir, train, val, test, device)\n",
-    "    res_list = res_list + [obj_val['ate_train'],obj_val['ate_test']]\n",
+    "    # args.twins_twoStage = False\n",
+    "    # args.twins_alpha = 0\n",
+    "    # mse_val, obj_val, final = run_TwinsCBIV(exp, args, dataDir, resultDir, train, val, test, device)\n",
+    "    # res_list = res_list + [obj_val['ate_train'],obj_val['ate_test']]\n",
+    "    \n",
+    "    # args.twins_twoStage = False\n",
+    "    # args.twins_alpha = alpha\n",
+    "    # mse_val, obj_val, final = run_TwinsCBIV(exp, args, dataDir, resultDir, train, val, test, device)\n",
+    "    # res_list = res_list + [obj_val['ate_train'],obj_val['ate_test']]\n",
+    "    \n",
+    "    # args.twins_twoStage = True\n",
+    "    # args.twins_alpha = 0\n",
+    "    # mse_val, obj_val, final = run_TwinsCBIV(exp, args, dataDir, resultDir, train, val, test, device)\n",
+    "    # res_list = res_list + [obj_val['ate_train'],obj_val['ate_test']]\n",
     "    \n",
     "    args.twins_twoStage = False\n",
-    "    args.twins_alpha = alpha\n",
-    "    mse_val, obj_val, final = run_TwinsCBIV(exp, args, dataDir, resultDir, train, val, test, device)\n",
-    "    res_list = res_list + [obj_val['ate_train'],obj_val['ate_test']]\n",
-    "    \n",
-    "    args.twins_twoStage = True\n",
-    "    args.twins_alpha = 0\n",
-    "    mse_val, obj_val, final = run_TwinsCBIV(exp, args, dataDir, resultDir, train, val, test, device)\n",
-    "    res_list = res_list + [obj_val['ate_train'],obj_val['ate_test']]\n",
-    "    \n",
-    "    args.twins_twoStage = True\n",
     "    args.twins_alpha = alpha\n",
     "    mse_val, obj_val, final = run_TwinsCBIV(exp, args, dataDir, resultDir, train, val, test, device)\n",
     "    res_list = res_list + [obj_val['ate_train'],obj_val['ate_test']]\n",
@@ -143,7 +192,7 @@
     "results.append(np.std(results,0))\n",
     "    \n",
     "res_df = pd.DataFrame(np.array(results),\n",
-    "                       columns=[ alpha+data_cls for alpha in ['Direct', 'CFR', 'TwoStage', 'CBIV'] for data_cls in ['_train', '_test']]).round(4)\n",
+    "                       columns=[ alpha+data_cls for alpha in ['CBIV'] for data_cls in ['_train', '_test']]).round(4)\n",
     "res_df.to_csv(resultDir + f'CBIV_{args.mode}_result.csv', index=False)\n",
     "res_df"
    ]
@@ -505,9 +554,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf-1.15-0",
+   "display_name": "tf-torch",
    "language": "python",
-   "name": "tf-1.15-0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
