--- a/run/test.ipynb
+++ b/run/test.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,16 +419,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([], shape=(10000, 0), dtype=float64)"
+       "Index(['v1', 'v2', 'x1', 'x2', 'x3', 'x4', 'x5', 'x6', 'x7', 'x8', 'x9', 'x10',\n",
+       "       'u1', 'u2', 'u3', 'u4', 'xs1', 'xs2', 'z', 'pi', 't', 'mu0', 'mu1', 'y',\n",
+       "       'f'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,8 +439,8 @@
    "source": [
     "exp = 1\n",
     "train_df = pd.read_csv(dataDir + f'{exp}/ood_{brdc[3.0]}/train.csv')\n",
-    "train = CausalDataset(train_df, variables = ['u','x','v','xs','z','p','s','m','t','g','y','f','c'], observe_vars=['v','x','xs'])\n",
-    "train.s"
+    "# train = CausalDataset(train_df, variables = ['u','x','v','xs','z','p','s','m','t','g','y','f','c'], observe_vars=['v','x','xs'])\n",
+    "train_df.columns\n"
    ]
   },
   {
@@ -1099,6 +1102,46 @@
    ],
    "source": [
     "ihdp_train['x'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x1', 'x2', 'x3', 'x4', 'x5', 'x6', 'x7', 'x8', 'x9', 'x10', 'xs1', 'xs2']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['x' + str(i+1) for i in range(10)] + ['xs' + str(i+1) for i in range(2)]"
    ]
   },
   {
